--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,11 +1,56 @@
+h1{
+    background:#d89036;
+    color: #402e32;
+    margin: 0;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    font-size: 24px;
+    font-weight: normal;
+}
+
+ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
+li{
+    background: white;
+    line-height: 40px;
+    color: #666;
+}
+li:nth-child(2n){
+    background: #f7f7f7;
+}
+
+input{
+    font-size: 18px;
+    color: #d89036;
+    background-color: #f7f7f7;
+    width: 100%;
+    padding: 13px 13px 13px 20px;
+    box-sizing: border-box;
+}
+
+input:focus{
+    background: white;
+    border: 3px solid #d89036;
+    outline: none;
+}
 
 #container{
     width: 360px;
-    margin: 0 auto;
-    border: 2px solid gray;
+    margin: 100px auto;
+    background: #f7f7f7;
+    box-shadow: 0 0 3px rgb(0, 0, 0, 0.25);
 }
 
 .completed{
     color: gray;
     text-decoration: line-through;
 }
+
