--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,56 +1,71 @@
-h1{
-    background:#d89036;
-    color: #402e32;
-    margin: 0;
-    padding: 10px 20px;
-    text-transform: uppercase;
-    font-size: 24px;
-    font-weight: normal;
+html {
+  height: 100%;
 }
 
-ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
+h1 {
+  background: #284a7e;
+  color: white;
+  margin: 0;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  font-size: 24px;
+  font-weight: normal;
 }
 
-body{
-    font-family: 'Montserrat', sans-serif;
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-li{
-    background: white;
-    line-height: 40px;
-    color: #666;
-}
-li:nth-child(2n){
-    background: #f7f7f7;
-}
-
-input{
-    font-size: 18px;
-    color: #d89036;
-    background-color: #f7f7f7;
-    width: 100%;
-    padding: 13px 13px 13px 20px;
-    box-sizing: border-box;
+body {
+  font-family: "Montserrat", sans-serif;
+  background-image: linear-gradient(
+    to right top,
+    #284a7e,
+    #26659c,
+    #2081b8,
+    #169ed3,
+    #12bceb
+  );
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
-input:focus{
-    background: white;
-    border: 3px solid #d89036;
-    outline: none;
+li {
+  background: white;
+  line-height: 40px;
+  color: #666;
+}
+li:nth-child(2n) {
+  background: #f7f7f7;
 }
 
-#container{
-    width: 360px;
-    margin: 100px auto;
-    background: #f7f7f7;
-    box-shadow: 0 0 3px rgb(0, 0, 0, 0.25);
+input {
+  font-size: 18px;
+  color: #284a7e;
+  background-color: #f7f7f7;
+  width: 100%;
+  padding: 13px 13px 13px 20px;
+  box-sizing: border-box;
 }
 
-.completed{
-    color: gray;
-    text-decoration: line-through;
+input:focus {
+  background: white;
+  border: 1px solid #284a7e;
+  outline: none;
 }
 
+#container {
+  width: 360px;
+  margin: 100px auto;
+  background: #f7f7f7;
+  box-shadow: 0 0 3px rgb(0, 0, 0, 0.25);
+}
+
+.completed {
+  color: gray;
+  text-decoration: line-through;
+}
